# portal

./: .gitignore  Cargo.toml  LICENSE  build.gradle.kts  build.rs  portal.config.example.yaml  portal.config.json.example  portal.log4j2.xml.example  portal.nginx.params.example  portal.properties.example  settings.gradle.kts
core/: build.gradle.kts
core/src/main/kotlin/: Relay.kt
macros/src/: lib.rs
portal-core/: build.gradle.kts
portal-core/src/main/kotlin/: Portal.kt
portal-core/src/main/kotlin/dfxyz/portal/: Configs.kt  Logger.kt  Main.kt  PortalHttpConsts.kt  PortalMessages.kt  PortalVerticle.kt  ProxyRuleVerticle.kt  RelayHandlers.kt  StaticWebResourceVerticle.kt
portal-core/src/main/kotlin/dfxyz/portal/extensions/: HttpClientRequest.kt  HttpServerRequest.kt  HttpServerResponse.kt  Promise.kt  String.kt
portal-web/: build.gradle.kts
portal-web/src/main/kotlin/dfxyz/portal/: Portal.kt
portal-web/src/main/resources/: index.html
src/: config.rs  lib.rs  macros.rs
src/main/kotlin/: ExtensionFunctions.kt  Logger.kt  Main.kt  Portal.kt  ProxyRule.kt  RelayByPortal.kt  RelayByProxy.kt  RelayHandlers.kt  Rules.kt  WebUI.kt
src/main/resources/: log4j2.xml.example
src/proto/: portal.proto
src/service/: control.rs  mod.rs
src/util/: context.rs  logger.rs  mod.rs  wait_group.rs  word_tree.rs
web/: build.gradle.kts
