[package]
name = "portal"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = "0.9"

[dependencies]
macros = { path = "macros" }
clap = { version = "3.0", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
parking_lot = "0.12"
byte = "0.2"
tokio = { version = "1.16", features = ["full"] }
prost = "0.9"
